--- a/styles.qss
+++ b/styles.qss
@@ -11,9 +11,8 @@ QPushButton:hover {
     color: rgb(38, 144, 216);
 }
 QTreeView {
-    border : solid red;
-    border-width: 0px 0px 0px 0px;
     font-size: 16px;
+    background-color: rgb(37, 37, 38);
 }
 QHeaderView::section {
     background-color: rgb(51, 51, 55);
@@ -37,6 +36,7 @@ QMainWindow {
 }
 * {
     font-size: 16px;
+    font-color: rgb(220, 220, 220);
 }
 
 .toast {
