--- a/styles.qss
+++ b/styles.qss
@@ -1,15 +1,57 @@
+* {
+    font-size: 16px;
+    color: rgb(220, 220, 220);
+}
+
 QPushButton {
     min-width: 85px;
     min-height: 25px;
     font-size: 16px;
     background-color: rgb(62, 62, 64);
 }
+
 QPushButton:hover {
     border : solid rgb(8, 114, 186);
     border-width: 1px 1px 1px 1px;
     background-color: rgb(62, 62, 64);
     color: rgb(38, 144, 216);
 }
+
+QPushButton:pressed {
+    background-color: rgb(38, 144, 216);
+    color: rgb(220, 220, 220);
+}
+
+ /* 
+ Whenever styling is applied to a checkbox element, the checkmark is not displayed
+ anymore. This is intended behavior, so the best we can do is to fill in the whole thing
+ with a solid color 
+ */
+ 
+QCheckBox::indicator {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgb(220, 220, 220);
+    background-color: rgb(30, 30, 30);
+}
+
+QCheckBox::indicator:checked {
+    background-color: rgb(90, 90, 90);
+    border: 1px solid rgb(38, 144, 216);
+}
+
+QCheckBox::indicator:unchecked {
+    background-color: rgb(30, 30, 30);
+    border: 1px solid rgb(220, 220, 220);
+}
+
+QCheckBox::indicator:hover {
+    border: 1px solid rgb(38, 144, 216);
+}
+
+
+
+
 QTreeView {
     font-size: 16px;
     background-color: rgb(37, 37, 38);
@@ -34,10 +76,12 @@ QTreeView::item:hover {
 QMainWindow {
     background-color: rgb(30, 30, 30);
 }
-* {
-    font-size: 16px;
-    font-color: rgb(220, 220, 220);
-}
+
+
+
+
+
+
 
 .toast {
     color: white;
@@ -51,7 +95,7 @@ QMainWindow {
 }
 
 .toast-error {
-    background-color: red;
+    background-color: rgb(145, 13, 52);
 }
 
 .toast-warning {
@@ -63,5 +107,5 @@ QMainWindow {
 }
 
 .toast-success {
-    background-color: green;
+    background-color: rgb(28, 165, 27);
 }
