--- a/styles.qss
+++ b/styles.qss
@@ -1,6 +1,8 @@
 * {
     font-size: 16px;
     color: rgb(220, 220, 220);
+    font-family: "Noto sans JP";
+    font-weight: 900;
 }
 
 QPushButton {
