--- a/styles.qss
+++ b/styles.qss
@@ -85,9 +85,6 @@ QMainWindow {
 }
 
 
-
-
-
 .toast {
     color: white;
     padding: 20px;
@@ -108,7 +105,7 @@ QMainWindow {
 }
 
 .toast-information {
-    background-color: blue;
+    background-color: rgb(38, 79, 120);
 }
 
 .toast-success {
