Make type configurable (#9)
* Make row formatting conditional

* Rename toast type

* Fix various exceptions

* Copy value on right-click

* Update toast style

* Add button to open track on musicbrainz

* Improve toast display duration

* Improve conditional formatting

* Improve url generation

* Add simple http listener

* Move server to separate file

* Reorganize files

* Add clear data button

* Update delegate style

* Allow selection of artist type

* Improve column detection

--- a/styles.qss
+++ b/styles.qss
@@ -2,7 +2,7 @@
     font-size: 16px;
     color: rgb(220, 220, 220);
     font-family: "Noto sans JP";
-    font-weight: 900;
+    font-weight: 400;
 }
 
 QPushButton {
@@ -85,9 +85,6 @@ QMainWindow {
 }
 
 
-
-
-
 .toast {
     color: white;
     padding: 20px;
@@ -108,7 +105,7 @@ QMainWindow {
 }
 
 .toast-information {
-    background-color: blue;
+    background-color: rgb(38, 79, 120);
 }
 
 .toast-success {
